fix elise post spacing

--- a/tumblrs/elise-abroad/app.less
+++ b/tumblrs/elise-abroad/app.less
@@ -111,7 +111,7 @@ h1,h2,h3,h4,h5,h6 {
 
 p {
     line-height: 1.5;
-    margin-bottom: @line-height-computed;
+    margin-bottom: @line-height-computed * 0.75;
 }
 
 // Breakpoints
@@ -448,7 +448,11 @@ body > nav {
 
     .post {
         padding-top: @line-height-computed;
-        margin-bottom: @line-height-computed;
+        margin-bottom: 0;
+
+        @media screen and (min-width: @screen-sm){
+            margin-bottom: @line-height-computed;
+        }
 
         h3 {
             margin-top: 0;
@@ -970,7 +974,7 @@ body > nav {
 
         .post-notes {
             clear: both;
-            margin-top: @line-height-computed * 2;
+            margin-top: 2rem;
 
             h3 {
                 .make-sm-column(10);
